--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,24 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.3.1"
-serde = "1.0.163"
+serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
-tokio = { version="1.28.2", features=["macros","rt-multi-thread"]}
+tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
+config = "0.13"
+uuid = { version = "1", features = ["v4"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+
+[dependencies.sqlx]
+version = "0.7"
+default-features = false
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+]
 
 [dev-dependencies]
 reqwest = "0.11"
