--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "zero2prod"
 actix-web = "4.3.1"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
+serde-aux = "4"
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
 config = "0.13"
 uuid = { version = "1", features = ["v4"] }
