--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,10 +41,16 @@ features = [
     "migrate",
 ]
 
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
-reqwest = "0.11"
 claims = "0.7"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-
+tokio = { version = "1", features = ["macros", "rt"] }
+wiremock = "0.5"
+serde_json = "1"
