--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ once_cell = "1"
 secrecy = { version = "0.8", features = ["serde"] }
 unicode-segmentation = "1"
 validator = "0.16"
+rand = { version = "0.8", features = ["std_rng"] }
 
 [dependencies.sqlx]
 version = "0.7"
@@ -54,3 +55,4 @@ quickcheck_macros = "0.9.1"
 tokio = { version = "1", features = ["macros", "rt"] }
 wiremock = "0.5"
 serde_json = "1"
+linkify = "0.9"
