--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.3.1"
+actix-web-flash-messages = {version="0.4", features = ["cookies"]}
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 serde-aux = "4"
@@ -35,9 +36,6 @@ base64 = "0.21"
 argon2 = { version = "0.4", features = ["std"] }
 urlencoding = "2"
 htmlescape = "0.3"
-hmac = { version = "0.12", features = ["std"] }
-sha2 = "0.10"
-hex = "0.4"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -54,7 +52,7 @@ features = [
 [dependencies.reqwest]
 version = "0.11"
 default-features = false
-features = ["json", "rustls-tls"]
+features = ["json", "rustls-tls", "cookies"]
 
 [dev-dependencies]
 claims = "0.7"
